<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">
    <ImageView
        android:id="@+id/iv_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.7"
        app:cardCornerRadius="15dp"
        app:cardElevation="3dp"
        android:layout_margin="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_marginTop="30dp"
                android:id="@+id/tv_college_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="35sp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="TextView" />

            <EditText
                android:id="@+id/et_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="24dp"

                android:hint="@string/prompt_id"
                android:inputType="number"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"

                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:selectAllOnFocus="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/et_random_code"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="4"
                    android:hint="@string/hint_random_code"

                    android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:selectAllOnFocus="true" />
                <ImageView
                    android:id="@+id/iv_random_code"
                    android:layout_width="62dp"
                    android:layout_height="22dp"
                    android:background="@drawable/border_black"
                    android:scaleType="fitCenter"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:background="@drawable/btn_bg_blue"
                android:layout_marginRight="16dp"
                android:text="@string/action_sign_in"
                android:layout_marginBottom="30dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</FrameLayout>