<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EditActivity">

<!--    使用ImageView显示背景图片可以避免因为ActionBar的存在，导致图片的变形-->

    <ImageView
        android:id="@+id/iv_bg_edit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">
        <!--通过给父控件添加如下属性
          android:focusable="true"
          android:focusableInTouchMode="true"
          取消EditText默认获取焦点-->


        <androidx.cardview.widget.CardView
            android:id="@+id/cv_edit_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:alpha="0.7"
            app:cardCornerRadius="15dp"
            app:cardElevation="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/course_name"
                    android:textSize="@dimen/edit_text_size" />

                <EditText
                    android:id="@+id/name_editText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/edit_text_hint"
                    android:inputType="text" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_edit_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:alpha="0.7"
            app:cardCornerRadius="15dp"
            app:cardElevation="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/classroom"
                        android:textSize="@dimen/edit_text_size" />

                    <EditText
                        android:id="@+id/et_class_room"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/edit_text_hint"
                        android:inputType="text" />

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />
                <LinearLayout
                    android:id="@+id/week_num_layout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/week_num"
                        android:textSize="@dimen/edit_text_size" />

                    <EditText
                        android:id="@+id/et_week_of_term"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:digits="0123456789-,"
                        android:ems="10"
                        android:hint="@string/week_num_example"
                        android:inputType="text" />

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/lay_out_press"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/weekOptions"
                        android:textSize="@dimen/edit_text_size" />

                    <Spinner
                        android:id="@+id/spinner_week_options"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/weekOptions"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/edit_text_size" />

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />
                <LinearLayout
                    android:id="@+id/class_num_layout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/lay_out_press"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/classLength"
                        android:textSize="@dimen/edit_text_size" />

                    <TextView
                        android:id="@+id/tv_class_num"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/edit_text_size" />

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/teacher"
                        android:textSize="@dimen/edit_text_size" />

                    <EditText
                        android:id="@+id/et_teacher"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/edit_text_hint"
                        android:inputType="text" />

                </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</FrameLayout>